Add text view to landing page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">GitAwesome</string>
     <string name="photo1">Developer Planning</string>
+    <string name="landingText">GitAwesome</string>
 </resources>
