--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="loginHeader">Log In to GitAwesome!</string>
     <string name="signInButton">Sign In</string>
     <string name="hiddenText">Username and password are:\n \"user\" and \"password\"</string>
+    <string name="userPlaceholder">Username</string>
+    <string name="locationPlaceholder">Location</string>
+    <string name="saved">Saved Languages</string>
 </resources>
