--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="userPlaceholder">Username</string>
     <string name="locationPlaceholder">Location</string>
     <string name="saved">Saved Languages</string>
+    <string name="profileImage">Profile Picture</string>
 </resources>
