Add message on Gits Activity if language does not return repos.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="locationPlaceholder">Location</string>
     <string name="saved">Saved Languages</string>
     <string name="profileImage">Profile Picture</string>
+    <string name="errormMessage">Sorry, there are no repositories using that language.</string>
 </resources>
