Add Create Account Activity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,13 @@
     <string name="errorMessage">Sorry, there are no repositories using that language.</string>
     <string name="aboutText">GitAwesome is a little app I wrote while at Epicodus. This app will hopefully help you use GitHub and Meetup.com to become a better programmer. Enjoy!</string>
     <string name="aboutLinkText">View GitHub Repo!</string>
+    <string name="alreadyHave">Already have an account? Log in here!</string>
+    <string name="createAccountHeader">Create Account!</string>
+    <string name="signUp">Sign up</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="password">Password</string>
+    <string name="email">Email</string>
+    <string name="name">Name</string>
+    <string name="github_username">Github Username</string>
+    <string name="zip_code">Zip Code (For Local Meetups)</string>
 </resources>
