--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="name">Name</string>
     <string name="github_username">Github Username</string>
     <string name="zip_code">Zip Code (For Local Meetups)</string>
+    <string name="no_account">Don\'t have an account? Sign up here!</string>
 </resources>
