--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,6 @@
     <string name="zip_code">Zip Code (For Local Meetups)</string>
     <string name="no_account">Don\'t have an account? Sign up here!</string>
     <string name="menu_logout">Logout</string>
+    <string name="create_dialog">Gitting Awesome!</string>
+    <string name="create_dialog2">Authenticating with Firebase...</string>
 </resources>
