--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="menu_logout">Logout</string>
     <string name="create_dialog">Gitting Awesome!</string>
     <string name="create_dialog2">Authenticating with Firebase...</string>
+    <string name="create_dialog3">Loading your awesome details!</string>
 </resources>
