--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="landingText">GitAwesome</string>
     <string name="loginButton">Login</string>
     <string name="aboutButton">About</string>
-    <string name="searchGitButton">Search Git</string>
+    <string name="searchGitButton">Search Github</string>
     <string name="searchMeetupButton">Search MeetUps</string>
     <string name="searchLanguage">Enter Coding Language</string>
     <string name="searchZip">Enter Zip Code</string>
