Add method to update user github username in firebase.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="no_repos">No Repositories</string>
     <string name="no_bio">No Github Bio</string>
     <string name="no_followers">No Followers</string>
+    <string name="change_username">Change Github Username</string>
 </resources>
